@@ -63,7 +63,7 @@ default level of compression.
 .B \(hy3, \(hy\(hyshrink\(hyextra
 Set the compression level to \(a"extra\(a".
 .TP
-.B \(hy3, \(hy\(hyshrink\(hyinsane
+.B \(hy4, \(hy\(hyshrink\(hyinsane
 Set the compression level to \(a"insane\(a".
 .TP
 .B \(hyf, \(hy\(hyforce
