@@ -90,7 +90,7 @@ Set the compression level to "extra".
 </table>
 <table width="100%" border="0" cellspacing="0" cellpadding="2">
 <tr valign="top" align="left"><td><strong>
--3, --shrink-insane
+-4, --shrink-insane
 </strong></td></tr><tr><td>
 Set the compression level to "insane".
 </td></tr>
