@@ -58,7 +58,7 @@ strategies:
     -3, --shrink-extra
         Set the compression level to "extra".
 
-    -3, --shrink-insane
+    -4, --shrink-insane
         Set the compression level to "insane".
 
     -f, --force
