@@ -1,12 +1,14 @@
 .TH "History For AdvanceCOMP" 1
 .SH NAME
 advcomp \(hy History For AdvanceCOMP
-.SH ADVANCECOMP VERSION 1.14 2005/01 
+.SH ADVANCECOMP VERSION 1.14 2005/02 
 .PD 0
 .IP \(bu
 Relaxed a consistency check for the local header in zip files.
 The crc and size entries are allowed to contain the real
 value also if a data descriptor is present.
+.IP \(bu
+Minor fixes at the documentation.
 .PD
 .SH ADVANCECOMP VERSION 1.13 2004/11 
 .PD 0
