@@ -5,13 +5,16 @@
 <body>
 <center><h2>History For AdvanceCOMP</h2></center>
 <h2> 
-AdvanceCOMP Version 1.14 2005/01
+AdvanceCOMP Version 1.14 2005/02
 </h2>
 <ul>
 <li>
 Relaxed a consistency check for the local header in zip files.
 The crc and size entries are allowed to contain the real
 value also if a data descriptor is present.
+</li>
+<li>
+Minor fixes at the documentation.
 </li>
 </ul>
 <h2> 
