@@ -3,12 +3,13 @@
                             =======================
 
 
-ADVANCECOMP VERSION 1.14 2005/01
+ADVANCECOMP VERSION 1.14 2005/02
 ================================
 
 * Relaxed a consistency check for the local header in zip files.
   The crc and size entries are allowed to contain the real
   value also if a data descriptor is present.
+* Minor fixes at the documentation.
 
 
 ADVANCECOMP VERSION 1.13 2004/11
